syntax = "proto3";

option go_package = "greet/;greet";

package greet;

service GreetService {
    // unary
    rpc Greet (GreetReq) returns (GreetRes){};
    // server streaming
    rpc GreetManyTimes (GreetManyTimesReq) returns (stream GreetManyTimesRes){};
};

// struct
message Greeting {
    string first_name = 1;
    string last_name = 2;
}

// greeting = {"first_name", "last_name"}
message GreetReq {
    Greeting greeting = 1;
}

message GreetRes {
    string result = 1;
}

message GreetManyTimesReq {
    Greeting greeting = 1;
}

message GreetManyTimesRes {
    string result = 1;
}
